# Drone

./: Doxyfile  Drone.pro  README.md
CentralStation/: CentralStation.pro  main.cpp
CommandStation/: CommandStation.pro  LICENSE.txt  Resources.qrc  altimeter.h  altimeterwidget.cpp  altimeterwidget.h  artificialhorizon.cpp  artificialhorizon.h  commandpanel.cpp  commandpanel.h  commandpanel.ui  commandstationparameters.h  compass.cpp  compasswidget.cpp  compasswidget.h  configurationpanel.cpp  configurationpanel.h  configurationpanel.ui  configurationwindow.ui  constants.h  horizonwidget.cpp  horizonwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mplayerwidget.cpp  mplayerwidget.h  sdlplayerwidget.cpp  sdlplayerwidget.h  videotab.cpp  videotab.h  videotab.ui
Database/: README.txt  create.sql  drop.sql
SDL-rtmp-player/: Makefile  main.c
UAVStation/: CMakeLists.txt  conf.lua  config.h.in  run.py
UAVStation/src/: dcp.h  main.c  uav_server.c  uav_server.h
flightIntruments/: altimeter.cpp  altimeter.h  artificialhorizon.cpp  artificialhorizon.h  common.h  compass.cpp  compass.h  flightIntruments.pro
libdcp/: dcp.h  dcpcommands.cpp  dcpcommands.h  dcppacket.cpp  dcppacket.h  dcppackethandlerinterface.cpp  dcppackethandlerinterface.h  dcpserver.cpp  dcpserver.h  dcpserverbackend.cpp  dcpserverbackend.h  dcpserverbackendcentral.cpp  dcpserverbackendcentral.h  dcpserverbackendremote.cpp  dcpserverbackendremote.h  dcpservercentral.cpp  dcpservercentral.h  dcpservercommand.cpp  dcpservercommand.h  libdcp.pro  libdcp_global.h
tests/: dummy.sql  test.sh  (+1 more)
